@@ -6,7 +6,7 @@
 			<trans-unit id="tx_srsendcard_sendcard" xml:space="preserve">
 				<source>Sent card</source>
 			</trans-unit>
-			<trans-unit id="tx_srsendcard_sentcard.fromwho" xml:space="preserve">
+			<trans-unit id="tx_srsendcard_sendcard.fromwho" xml:space="preserve">
 				<source>Name of card sender</source>
 			</trans-unit>
 			<trans-unit id="tx_srsendcard_sendcard.uid" xml:space="preserve">
